--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-tippspiel-19914-firebase-adminsdk-dgecm-432900a038.json
+# tippspiel-19914-firebase-adminsdk-dgecm-432900a038.json
