--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,10 @@
 name: CI
 
 # Controls when the workflow will run
-on: [push]
+on:
+  push:
+    branches:
+      - 'main'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -11,7 +14,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
