--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/tobi2k/tippspiel:latest
+          tags: ghcr.io/tobi2k/tippspiel:${GITHUB_REF##*/}
