--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Branch Name
+        uses: tj-actions/branch-names@v5.1
+        id: branch-name
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/tobi2k/tippspiel:${GITHUB_REF##*/}
+          tags: ghcr.io/tobi2k/tippspiel:${{ steps.branch-name.outputs.current_branch }}
