--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,15 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
   push
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Docker Login
         uses: docker/login-action@v1.10.0
         with:
@@ -35,7 +26,12 @@ jobs:
         with:
           push: true
           tags: ghcr.io/tobi2k/tippspiel:${{ steps.branch-name.outputs.current_branch }}
-          
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
       - name: SSH into server and pull image
         uses: fifsky/ssh-action@master
         with:
