--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
           command: |
-            cd /tmp
+            docker pull ghcr.io/tobi2k/tippspiel:${{ steps.branch-name.outputs.current_branch }}
             ls -a
           host: ${{ secrets.HOST }}
           user: root
