--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,11 @@ jobs:
       - name: SSH into server and pull image
         uses: fifsky/ssh-action@master
         with:
-          command: 
-            docker pull ghcr.io/tobi2k/tippspiel:${{ needs.build.outputs.branch_name }} && ls -a
+          command: |
+            docker pull ghcr.io/tobi2k/tippspiel:${{ needs.build.outputs.branch_name }}
+            docker stop top-tips-server
+            docker rm top-tips-server
+            docker run -d --restart unless-stopped --network host --name=top-tips-server ghcr.io/tobi2k/tippspiel:${{ needs.build.outputs.branch_name }}
           host: ${{ secrets.HOST }}
           user: root
           key: ${{ secrets.PRIVATE_KEY}}
