--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tippspiel-server",
+  "name": "top-tips-server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "firebase-admin": "^9.11.1",
     "moment": "^2.29.1",
     "mysql2": "^2.3.0",
