--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,6 @@ name: CI
 on:
   push
 
-env:
-  API_KEY: ${{ secrets.API_KEY }}
-  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-  FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-  FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -48,10 +42,10 @@ jobs:
             docker pull ghcr.io/tobi2k/tippspiel:${{ needs.build.outputs.branch_name }}
             docker stop top-tips-server
             docker rm top-tips-server
-            export API_KEY=${{ env.API_KEY }}
-            export FIREBASE_PROJECT_ID=${{ env.FIREBASE_PROJECT_ID }}
-            export FIREBASE_PRIVATE_KEY=${{ env.FIREBASE_PRIVATE_KEY }}
-            export FIREBASE_CLIENT_EMAIL=${{ env.FIREBASE_CLIENT_EMAIL }}
+            export API_KEY=${{ secrets.API_KEY }}
+            export FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+            export FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
+            export FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
             docker run -d --restart unless-stopped --network host --name=top-tips-server --env API_KEY=$API_KEY --env FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID --env FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY --env FIREBASE_CLIENT_EMAIL=$FIREBASE_CLIENT_EMAIL ghcr.io/tobi2k/tippspiel:${{ needs.build.outputs.branch_name }}
           host: ${{ secrets.HOST }}
           user: root
