--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI
 
 on:
-  push
+  push:
+    branches:
+      - main
 
 env:
   API_KEY: ${{ secrets.API_KEY }}
@@ -33,20 +35,19 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          push: github.ref == 'refs/heads/master'
-          tags: ghcr.io/tobi2k/top-tips:${{ steps.branch-name.outputs.current_branch }}
+          push: true
+          tags: ghcr.io/tobi2k/top-tips
   
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: SSH into server and pull image
         uses: fifsky/ssh-action@master
         with:
           command: |
-            docker pull ghcr.io/tobi2k/top-tips:${{ needs.build.outputs.branch_name }}
+            docker pull ghcr.io/tobi2k/top-tips
             docker stop top-tips-server
             docker rm top-tips-server
             rm ./.env && touch ./.env
@@ -55,7 +56,7 @@ jobs:
             echo 'FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}' >> ./.env
             echo 'FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}' >> ./.env
             echo 'FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}' >> ./.env
-            docker run -d --restart unless-stopped --network host --name=top-tips-server --env-file ./.env ghcr.io/tobi2k/top-tips:${{ needs.build.outputs.branch_name }}
+            docker run -d --restart unless-stopped --network host --name=top-tips-server --env-file ./.env ghcr.io/tobi2k/top-tips
           host: ${{ secrets.HOST }}
           user: root
           key: ${{ secrets.PRIVATE_KEY}}
