--- a/package.json
+++ b/package.json
@@ -35,19 +35,13 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "rand-token": "^1.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.0.3",
     "@types/bcrypt": "^5.0.2",
-    "@types/cron": "^2.4.0",
-    "@types/express": "^4.17.21",
     "@types/node": "^20.10.1",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
@@ -57,9 +51,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.2"
+    "ts-node": "^10.9.1"
   }
 }
