--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "rand-token": "^1.0.1",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0"
