--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/schedule": "^3.0.4",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
+    "@sendgrid/mail": "^8.1.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "firebase-admin": "^12.0.0",
