--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
             docker rm top-tips-server
             rm ./.env && touch ./.env
             echo 'API_KEY=${{ secrets.API_KEY }}' >> ./.env
+            echo 'SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}' >> ./.env
             echo 'APP_VERSION=${{ secrets.APP_VERSION }}' >> ./.env
             echo 'CRON=${{ secrets.CRON }}' >> ./.env
             echo 'JWT_SECRET=${{ secrets.JWT_SECRET }}' >> ./.env
