--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Branch Name
-        uses: tj-actions/branch-names@7.0.7
+        uses: tj-actions/branch-names@v7.0.7
         id: branch-name
 
       - name: Build and push
