--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
@@ -32,6 +33,7 @@
     "firebase-admin": "^13.4.0",
     "moment": "^2.30.1",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -45,6 +47,7 @@
     "@nestjs/cli": "^11.0.10",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.0.14",
+    "@types/nodemailer": "^7.0.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
