--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,12 @@ jobs:
             EOF
 
             docker pull ghcr.io/tobi2k/top-tips
+            
             docker stop top-tips-server || true
 
             docker rm top-tips-server || true
 
-            docker run -d --restart unless-stopped \
-            --env-file .env
-            --network host \
-            --name=top-tips-server ghcr.io/tobi2k/top-tips
+            docker run -d --restart unless-stopped --env-file .env --network host --name=top-tips-server ghcr.io/tobi2k/top-tips 
 
             rm .env
           host: '${{ secrets.HOST }}'
